add in-memory booking api
