# docs/api/api-spec/openapi-bundled.yaml
@@ -123,6 +123,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
   /api/bookings:
+    get:
+      tags:
+        - Bookings
+      summary: Get all the bookings
+      operationId: getBookings
+      responses:
+        '200':
+          description: All successful bookings
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/BookingResponse'
     post:
       tags:
         - Bookings
@@ -290,20 +304,6 @@ components:
           type: string
           format: date-time
           example: '2026-09-20T18:05:00'
-    CreateBookingRequest:
-      type: object
-      required:
-        - reservationId
-        - customerId
-      properties:
-        reservationId:
-          type: integer
-          format: int64
-          example: 5001
-        customerId:
-          type: integer
-          format: int64
-          example: 1
     BookingResponse:
       type: object
       required:
@@ -330,3 +330,17 @@ components:
         ticketCode:
           type: string
           example: TCK-9001
+    CreateBookingRequest:
+      type: object
+      required:
+        - reservationId
+        - customerId
+      properties:
+        reservationId:
+          type: integer
+          format: int64
+          example: 5001
+        customerId:
+          type: integer
+          format: int64
+          example: 1
