# src/main/java/com/truc/eventbooking/booking/dto/BookingResponse.java
@@ -1,0 +1,11 @@
+package com.truc.eventbooking.booking.dto;
+
+import com.truc.eventbooking.booking.BookingStatus;
+
+public record BookingResponse (
+        Long bookingId,
+        Long reservationId,
+        BookingStatus status,
+        String ticketCode
+){
+}
