# src/main/java/com/truc/eventbooking/booking/dto/CreateBookingRequest.java
@@ -1,0 +1,7 @@
+package com.truc.eventbooking.booking.dto;
+
+public record CreateBookingRequest (
+        Long reservationId,
+        Long customerId
+){
+}
